fix Dependency delete button is hidden if dependency name is too long
- add title property so full names are displayed on hover

--- a/client/assets/styles/scss/modals/modals-getting-started.scss
+++ b/client/assets/styles/scss/modals/modals-getting-started.scss
@@ -178,13 +178,15 @@
     line-height: 36px;
     margin: 0 0 6px;
     overflow-y: hidden;
-    padding: 0 0 0 9px;
+    padding: 0 30px 0 9px;
   }
 
   // remove dependency
   .btn-close {
-    float: right;
     height: 36px;
+    position: absolute;
+    right: 0;
+    top: 0;
     transition: none;
 
     &:hover,
